Fixed overflow

--- a/main.css
+++ b/main.css
@@ -61,6 +61,7 @@ body {
     align-items: flex-end;
     border: 2px solid black;
     font-family: 'Calculator', sans-serif;
+    overflow: scroll;
 }
 
 #equal {
